CampingProject/force-app/main/default/objects/CampPrep__c/CampPrep__c.object-meta.xml
<CustomObject>
    <description>All tasks to complete prior to a camping trip</description>
    <label>CampPrep</label>
    <nameField>
        <label>CampPrep Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CampPreps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>