CampingProject/force-app/main/default/objects/CampPrep__c/fields/Bathroom__c.field-meta.xml
<CustomField>
    <fullName>Bathroom__c</fullName>
    <defaultValue>false</defaultValue>
    <description>All things needed for keeping clean, and Meds</description>
    <label>Bathroom</label>
    <type>Checkbox</type>
</CustomField>