CampingProject/force-app/main/default/objects/CampPrep__c/fields/Bedding__c.field-meta.xml
<CustomField>
    <fullName>Bedding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sheet, Sleeping bag, Pillow and warm Bankets</description>
    <label>Bedding</label>
    <type>Checkbox</type>
</CustomField>