CampingProject/force-app/main/default/objects/CampPrep__c/fields/Camper__c.field-meta.xml
<CustomField>
    <fullName>Camper__c</fullName>
    <label>Camper</label>
    <referenceTo>Camper__c</referenceTo>
    <relationshipLabel>CampPreps</relationshipLabel>
    <relationshipName>CampPreps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>