CampingProject/force-app/main/default/objects/CampPrep__c/fields/Complete_Percent__c.field-meta.xml
<CustomField>
    <fullName>Complete_Percent__c</fullName>
    <formula>if(ISPICKVAL(State__c,&quot;not Started&quot;),25/100,
if(ISPICKVAL(State__c,&quot;Partial&quot;),50/100,
if(ISPICKVAL(State__c,&quot;Mostly ready&quot;),75/100,
if(ISPICKVAL(State__c,&quot;ready to go today&quot;),1,0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>