CampingProject/force-app/main/default/objects/CampPrep__c/fields/Food__c.field-meta.xml
<CustomField>
    <fullName>Food__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Refrigerator, Freezer, Snacks, and any utensils or towels</description>
    <label>Food</label>
    <type>Checkbox</type>
</CustomField>