CampingProject/force-app/main/default/objects/CampPrep__c/fields/Front_Storage__c.field-meta.xml
<CustomField>
    <fullName>Front_Storage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Chairs, Grill, Tools, Leveling blocks, Power cable</description>
    <label>Front Storage</label>
    <type>Checkbox</type>
</CustomField>