CampingProject/force-app/main/default/objects/CampPrep__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not started</fullName>
                <default>true</default>
                <label>Not started</label>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Mostly ready</fullName>
            </value>
            <value>
                <fullName>Ready to go today</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>