CampingProject/force-app/main/default/objects/CampPrep__c/fields/Water__c.field-meta.xml
<CustomField>
    <fullName>Water__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fresh water tank, water heater, Black water treated</description>
    <label>Water</label>
    <type>Checkbox</type>
</CustomField>